[gd_scene load_steps=2 format=3 uid="uid://victory_screen"]

[ext_resource type="Script" path="res://scripts/ui/VictoryScreen.gd" id="1_script"]

[node name="VictoryScreen" type="CanvasLayer"]
layer = 100
process_mode = 3
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "üèÜ CHI·∫æN TH·∫ÆNG! üèÜ"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Th·ªùi gian: 30:00"
horizontal_alignment = 1

[node name="KillsLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Y√™u Ma ƒë√£ di·ªát: 999"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "C·∫£nh Gi·ªõi: 20"
horizontal_alignment = 1

[node name="PlayAgainButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "CH∆†I L·∫†I"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "THO√ÅT"
