# â•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—
# â•‘                          VICTORY SCREEN                                   â•‘
# â•‘              Hiá»ƒn thá»‹ khi player sá»‘ng sÃ³t Ä‘á»§ thá»i gian                    â•‘
# â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
#
# â”Œâ”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”
# â”‚ BÃ€I Há»ŒC: Win Condition (Äiá»u kiá»‡n tháº¯ng)                                â”‚
# â”œâ”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”¤
# â”‚ Má»ŒI GAME Cáº¦N:                                                           â”‚
# â”‚   1. Win condition - Äiá»u kiá»‡n Ä‘á»ƒ tháº¯ng                                 â”‚
# â”‚   2. Lose condition - Äiá»u kiá»‡n Ä‘á»ƒ thua                                 â”‚
# â”‚   3. Feedback - Cho player biáº¿t há» tháº¯ng/thua                           â”‚
# â”‚                                                                         â”‚
# â”‚ VAMPIRE SURVIVORS STYLE:                                                â”‚
# â”‚   - Win: Sá»‘ng sÃ³t 30 phÃºt                                               â”‚
# â”‚   - Lose: HP = 0                                                        â”‚
# â””â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”˜

extends CanvasLayer


# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
#                              REFERENCES
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

@onready var panel: Panel = $Panel
@onready var title_label: Label = $Panel/VBoxContainer/TitleLabel
@onready var time_label: Label = $Panel/VBoxContainer/TimeLabel
@onready var kills_label: Label = $Panel/VBoxContainer/KillsLabel
@onready var level_label: Label = $Panel/VBoxContainer/LevelLabel
@onready var play_again_button: Button = $Panel/VBoxContainer/PlayAgainButton
@onready var quit_button: Button = $Panel/VBoxContainer/QuitButton


# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
#                              INITIALIZATION
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

func _ready() -> void:
	# áº¨n ban Ä‘áº§u
	visible = false
	
	# Connect buttons
	play_again_button.pressed.connect(_on_play_again)
	quit_button.pressed.connect(_on_quit)
	
	# Connect victory signal
	Events.victory.connect(_on_victory)


# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
#                           EVENT HANDLERS
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

func _on_victory() -> void:
	# â”Œâ”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”
	# â”‚ BÃ€I Há»ŒC: Victory Feedback                                          â”‚
	# â”œâ”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”¤
	# â”‚ Khi player tháº¯ng, cáº§n:                                              â”‚
	# â”‚   1. Dá»«ng game (pause)                                              â”‚
	# â”‚   2. Hiá»‡n mÃ n hÃ¬nh chiáº¿n tháº¯ng                                      â”‚
	# â”‚   3. Hiá»‡n stats (Ä‘á»ƒ player tá»± hÃ o)                                  â”‚
	# â”‚   4. Cho phÃ©p chÆ¡i láº¡i hoáº·c thoÃ¡t                                   â”‚
	# â””â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”˜
	
	# Pause game
	get_tree().paused = true
	
	# Láº¥y stats tá»« GameManager
	var total_time = GameManager.game_time
	var total_kills = GameManager.total_kills
	var player_level = GameManager.player_level
	
	# Format time
	var minutes = int(total_time) / 60
	var seconds = int(total_time) % 60
	
	# Update labels
	title_label.text = "ðŸ† CHIáº¾N THáº®NG! ðŸ†"
	time_label.text = "Thá»i gian: %02d:%02d" % [minutes, seconds]
	kills_label.text = "YÃªu Ma Ä‘Ã£ diá»‡t: %d" % total_kills
	level_label.text = "Cáº£nh Giá»›i Ä‘áº¡t Ä‘Æ°á»£c: %d" % player_level
	
	# Hiá»ƒn thá»‹
	visible = true


func _on_play_again() -> void:
	# â”Œâ”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”
	# â”‚ BÃ€I Há»ŒC: Scene Reloading                                            â”‚
	# â”œâ”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”¤
	# â”‚ get_tree().reload_current_scene():                                  â”‚
	# â”‚   - Táº£i láº¡i scene hiá»‡n táº¡i tá»« Ä‘áº§u                                   â”‚
	# â”‚   - Táº¥t cáº£ nodes Ä‘Æ°á»£c táº¡o láº¡i                                       â”‚
	# â”‚   - State reset vá» ban Ä‘áº§u                                          â”‚
	# â”‚   - CÃ¡ch nhanh nháº¥t Ä‘á»ƒ "restart game"                               â”‚
	# â””â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”˜
	
	get_tree().paused = false
	GameManager.reset_game()
	get_tree().reload_current_scene()


func _on_quit() -> void:
	get_tree().quit()
